cmake_minimum_required(VERSION 3.28)
project(C__work)

set(CMAKE_CXX_STANDARD 17)

add_executable(C__work main.cpp)

add_executable(1-10 tests/1-10.cpp)
add_executable(string-empty learn/Chapter-3Three/string/string-empty.cpp)
add_executable(string-size learn/Chapter-3Three/string/string-size.cpp)
add_executable(comparison-string learn/Chapter-3Three/string/comparison-string.cpp)
add_executable(character learn/Chapter-3Three/string/character.cpp)
add_executable(character-1 learn/Chapter-3Three/string/16cctype/ispunct.cpp)
add_executable(toupper learn/Chapter-3Three/string/16cctype/toupper.cpp)
add_executable(change-part-string learn/Chapter-3Three/string/change-part-string.cpp)
add_executable(what-is-vector learn/Chapter-3Three/vector/what-is-vector.cpp)
add_executable(how-to-use-vector learn/Chapter-3Three/vector/how-to-use-vector.cpp)
add_executable(add-elements learn/Chapter-3Three/vector/add-elements.cpp)
add_executable(iterator learn/Chapter-3Three/vector/iterator/iterator.cpp)
add_executable(begin-and-end learn/Chapter-3Three/vector/iterator/begin-and-end.cpp)
add_executable(literator-arithmetic learn/Chapter-3Three/vector/iterator/literator-arithmetic.cpp)
add_executable(3-14 tests/3/3-14.cpp)

add_executable(list-initialization learn/Chapter-1ONE/initialization/list-initialization.cpp)
add_executable(default-initialization learn/Chapter-1ONE/initialization/default-initialization.cpp)
add_executable(array learn/Chapter-3Three/array/array.cpp)
add_executable(cstddef learn/Chapter-3Three/array/cstddef.cpp)
add_executable(array-pointer learn/Chapter-3Three/array/array-pointer.cpp)
add_executable(priority-level learn/Chapter-4Four/priority-level.cpp)
add_executable(Arithmetic-operator learn/Chapter-4Four/opertaor/Arithmetic-operator.cpp)
add_executable(Logical-operator learn/Chapter-4Four/opertaor/Logical-operator.cpp)
add_executable(Decreasing-increasing-operator learn/Chapter-4Four/opertaor/Decreasing-increasing-operator.cpp)
add_executable(member-access-operator learn/Chapter-4Four/opertaor/member-access-operator.cpp)
add_executable(Conditional-operator learn/Chapter-4Four/opertaor/Conditional-operator.cpp)
add_executable(Bitwise-operator learn/Chapter-4Four/opertaor/Bitwise-operator.cpp)
add_executable(sizeof learn/Chapter-4Four/opertaor/sizeof.cpp)
add_executable(Comma-operator  "learn/Chapter-4Four/opertaor/Comma-operator .cpp")
add_executable(Assignment-operators  "learn/Chapter-4Four/opertaor/Assignment-operators .cpp")
add_executable(implicit-conversion learn/Chapter-4Four/implicit-conversion.cpp)
add_executable(explicit learn/Chapter-4Four/explicit.cpp)
add_executable(compound-statement learn/Chapter-5Five/statement/compound-statement.cpp)
add_executable(if learn/Chapter-5Five/if/if.cpp)
add_executable(Nested-if learn/Chapter-5Five/if/Nested-if.cpp)
add_executable(range-for-statement learn/Chapter-5Five/for/range-for-statement.cpp)
add_executable(for learn/Chapter-5Five/for/for.cpp)